1.增加了 我的页面 1.1增加了 增加了个人信息页面 1.2增加了 增加了收藏页面 2.增加了 商城页面 3.增加了 设置页面

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="white">#FFFFFF</color>
     <color name="split_line">#e2e2e2</color>
     <color name="tabbar_color">#aaaaaa</color>
+    <color name="division">#bfbfbf</color>
+    <color name="theme_text">#7F7F7F</color>
+    <color name="black">#000</color>
+    <color name="red">#CC3333</color>
 </resources>
